// Esquema de datos — CMPC Libros (PostgreSQL).
// Modelo normalizado (BCNF). La disponibilidad de un libro se deriva de su stock,
// por lo que NO se almacena como columna: el stock es la única fuente de verdad.
// Las eliminaciones son lógicas (soft delete) mediante `deletedAt`.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  ADMIN
  USER
}

enum AuditAction {
  CREATE
  UPDATE
  DELETE
  RESTORE
  LOGIN
}

model User {
  id           String    @id @default(uuid()) @db.Uuid
  email        String    @unique
  passwordHash String    @map("password_hash")
  name         String
  role         Role      @default(USER)
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")
  deletedAt    DateTime? @map("deleted_at")

  auditLogs AuditLog[]
  sessions  Session[]

  @@index([deletedAt])
  @@map("users")
}

// Sesión de refresh (un dispositivo). Soporta rotación con detección de reuso:
// cada refresh token es una fila; al rotar se revoca la anterior y se crea una nueva
// en la misma `familyId`. Si llega un refresh ya revocado/rotado, se considera robo
// y se revoca toda la familia (todos los tokens derivados de ese inicio de sesión).
model Session {
  id           String    @id @default(uuid()) @db.Uuid
  userId       String    @map("user_id") @db.Uuid
  user         User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  familyId     String    @map("family_id") @db.Uuid
  tokenHash    String    @map("token_hash")
  userAgent    String?   @map("user_agent")
  ip           String?
  expiresAt    DateTime  @map("expires_at")
  revokedAt    DateTime? @map("revoked_at")
  replacedById String?   @map("replaced_by_id") @db.Uuid
  createdAt    DateTime  @default(now()) @map("created_at")

  @@index([userId])
  @@index([familyId])
  @@map("sessions")
}

model Author {
  id        String    @id @default(uuid()) @db.Uuid
  name      String
  bio       String?
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  books BookAuthor[]

  @@index([name])
  @@index([deletedAt])
  @@map("authors")
}

model Publisher {
  id        String    @id @default(uuid()) @db.Uuid
  name      String    @unique
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  books Book[]

  @@index([deletedAt])
  @@map("publishers")
}

model Genre {
  id        String    @id @default(uuid()) @db.Uuid
  name      String    @unique
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  books Book[]

  @@index([deletedAt])
  @@map("genres")
}

model Book {
  id            String    @id @default(uuid()) @db.Uuid
  title         String
  isbn          String?   @unique
  description   String?
  // Precio de venta al público (bruto, IVA incluido), en la unidad mínima de la divisa.
  // Para CLP = pesos enteros (sin centavos); para divisas con subunidad serían sus minor units.
  price         Int       @default(0)
  // ISO-4217. Permite escalar a otra divisa sin migrar la precisión del monto.
  currency      String    @default("CLP")
  stock         Int       @default(0)
  publishedYear Int?      @map("published_year")
  imageUrl      String?   @map("image_url")

  publisherId String    @map("publisher_id") @db.Uuid
  publisher   Publisher @relation(fields: [publisherId], references: [id])

  genreId String @map("genre_id") @db.Uuid
  genre   Genre  @relation(fields: [genreId], references: [id])

  authors BookAuthor[]

  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  // Índices para los filtros y ordenamientos más frecuentes del listado.
  @@index([title])
  @@index([publisherId])
  @@index([genreId])
  @@index([stock]) // soporta el filtro de disponibilidad (stock > 0)
  @@index([deletedAt])
  @@index([createdAt])
  @@map("books")
}

// Tabla puente Libro↔Autor (muchos-a-muchos). Clave primaria compuesta:
// no admite duplicados y no tiene atributos fuera de la clave.
model BookAuthor {
  bookId   String @map("book_id") @db.Uuid
  authorId String @map("author_id") @db.Uuid

  book   Book   @relation(fields: [bookId], references: [id], onDelete: Cascade)
  author Author @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@id([bookId, authorId])
  @@index([authorId])
  @@map("book_authors")
}

// Bitácora de auditoría (append-only). `changes` guarda el diff en JSON.
model AuditLog {
  id        String      @id @default(uuid()) @db.Uuid
  action    AuditAction
  entity    String
  entityId  String?     @map("entity_id")
  changes   Json?
  ip        String?
  userId    String?     @map("user_id") @db.Uuid
  user      User?       @relation(fields: [userId], references: [id])
  createdAt DateTime    @default(now()) @map("created_at")

  @@index([entity, entityId])
  @@index([userId])
  @@index([createdAt])
  @@map("audit_logs")
}
