// CMPC Libros — Modelo relacional (importar en https://dbdiagram.io)
// Normalizado a BCNF. Soft delete vía deleted_at. La disponibilidad se deriva del stock.

Table users {
  id uuid [pk]
  email varchar [unique, not null]
  password_hash varchar [not null]
  name varchar [not null]
  role varchar [not null, note: 'ADMIN | USER']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

// Sesiones de refresh: rotación con detección de reuso y revocación de familia (multi-dispositivo).
Table sessions {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  family_id uuid [not null, note: 'agrupa los tokens rotados de un mismo login']
  token_hash varchar [not null]
  user_agent varchar
  ip varchar
  expires_at timestamp [not null]
  revoked_at timestamp
  replaced_by_id uuid [note: 'sesión que la reemplazó al rotar']
  created_at timestamp
  Indexes {
    user_id
    family_id
  }
}

Table authors {
  id uuid [pk]
  name varchar [not null]
  bio text
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  Indexes {
    name
    deleted_at
  }
}

Table publishers {
  id uuid [pk]
  name varchar [unique, not null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table genres {
  id uuid [pk]
  name varchar [unique, not null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table books {
  id uuid [pk]
  title varchar [not null]
  isbn varchar [unique]
  description text
  price int [note: 'bruto IVA incl., pesos CLP (entero); CHECK price >= 0']
  currency varchar [not null, default: 'CLP', note: 'ISO-4217']
  stock int [note: 'CHECK stock >= 0']
  published_year int [note: 'CHECK 1450..2100']
  image_url varchar
  publisher_id uuid [not null, ref: > publishers.id]
  genre_id uuid [not null, ref: > genres.id]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  Indexes {
    title
    publisher_id
    genre_id
    stock
    deleted_at
    created_at
  }
}

// Tabla puente Libro↔Autor (muchos-a-muchos), clave primaria compuesta.
Table book_authors {
  book_id uuid [ref: > books.id]
  author_id uuid [ref: > authors.id]
  Indexes {
    (book_id, author_id) [pk]
    author_id
  }
}

Table audit_logs {
  id uuid [pk]
  action varchar [not null, note: 'CREATE | UPDATE | DELETE | RESTORE | LOGIN']
  entity varchar [not null]
  entity_id varchar
  changes json
  ip varchar
  user_id uuid [ref: > users.id]
  created_at timestamp
  Indexes {
    (entity, entity_id)
    user_id
    created_at
  }
}
